<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    >
     <TextView 
            android:text="@string/song_title" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:textColor="#ffff"/>
        
        <TextView android:id="@+id/tv_song_title"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
             android:textColor="#ffff"/>
    </LinearLayout>
    
     <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    >
        <TextView 
            android:text="@string/song_artist" 
             android:textColor="#ffff"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
        
        <TextView  android:id="@+id/tv_song_artist"
             android:textColor="#ffff"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    >
        <TextView 
            android:text="@string/song_album" 
             android:textColor="#ffff"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
        
        <TextView android:id="@+id/tv_song_album"
             android:textColor="#ffff"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"/>
    </LinearLayout>
     <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    >
        <TextView 
            android:text="@string/song_format" 
             android:textColor="#ffff"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
        
        <TextView  android:id="@+id/tv_song_format"
             android:textColor="#ffff"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    >
        <TextView 
            android:text="@string/song_duration" 
             android:textColor="#ffff"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
        
        <TextView android:id="@+id/tv_song_duration"
             android:textColor="#ffff"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"/>
    </LinearLayout>
     <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    >
        <TextView 
            android:text="@string/song_size" 
             android:textColor="#ffff"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
        
        <TextView  android:id="@+id/tv_song_size"
             android:textColor="#ffff"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
     <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    >
        <TextView 
            android:text="@string/song_path" 
             android:textColor="#ffff"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
        
        <TextView  
            android:id="@+id/tv_song_filepath"
             android:textColor="#ffff"
            android:singleLine="false"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>