<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.healthslife.allinterface.SlidingMenu
        android:id="@+id/id_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/orange_bg_small" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <include layout="@layout/left_menu" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#F0F0F0"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/title_health"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/title_top_bg"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/health_service"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        />

                    <Button
                        android:id="@+id/to_navige_btn"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="13dp"
                        android:background="@drawable/liebiao"
                        android:gravity="left"
                        android:onClick="to_navige_btn" >
                    </Button>
                     <Button
                        android:id="@+id/map_btn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="6dp"
                        android:background="@drawable/ditu"
                        android:layout_alignParentRight="true" >
                    </Button>
                </RelativeLayout>

                <com.healthslife.allinterface.CircleBar
                    android:id="@+id/circle_bar"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/show_sport_info" />

                <RelativeLayout
                    android:id="@+id/image_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" >

                    <ImageButton
                        android:id="@+id/energy_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/kaluli_normal2"
                        android:contentDescription="@string/image_description"
                        android:onClick="energy_btn" />

                    <ImageButton
                        android:id="@+id/stepnumber_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="27dp"
                        android:background="@drawable/walking_normal"
                        android:contentDescription="@string/image_description"
                        android:onClick="stepnumber_btn" />

                    <ImageButton
                        android:id="@+id/aqi_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="27dp"
                        android:background="@drawable/quality_normal"
                        android:contentDescription="@string/image_description"
                        android:onClick="aqi_btn" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </com.healthslife.allinterface.SlidingMenu>

</RelativeLayout>