<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_parent_cotent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <View
        android:id="@+id/v_list_main_top_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true" >
    </View>

    <LinearLayout
        android:id="@+id/rl_list_main_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ll_list_bottom_bar"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/v_list_main_top_bar"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/player_top_bg"
            android:gravity="center"
            android:orientation="horizontal" >

             <ImageButton
		        android:id="@+id/ibtn_back"
		        android:layout_width="60dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image_description"
		        android:background="@drawable/back" 
        	/>
            <include
                android:id="@+id/list_tab_item_music"
                layout="@layout/list_tab_item" />
            <ImageButton
		        android:id="@+id/ibtn_scan"
		        android:layout_width="40dp"
		        android:layout_height="40dp"
		        android:layout_marginRight="5dp"
		        android:contentDescription="@string/image_description"
		        android:background="@drawable/btn_menu_scanner" 
        	/>

        </LinearLayout>
        
       
        <com.healthslife.music.custom.FlingGalleryView
            android:id="@+id/fgv_list_main"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <include
                android:id="@+id/list_main_music"
                layout="@layout/list_main_music" />

            
        </com.healthslife.music.custom.FlingGalleryView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_list_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ll_list_bottom_bar"
        android:layout_below="@+id/v_list_main_top_bar"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/player_top_bg" >

            <ImageButton
                android:id="@+id/ibtn_list_content_icon"
                android:layout_width="60dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/image_description"
                android:layout_marginTop="13dp"
                />

            <TextView
                android:id="@+id/tv_list_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:lines="1"
                android:singleLine="true"
                android:textColor="#FFFFFFFF"
                android:textSize="16sp"
                />

            <ImageButton
                android:id="@+id/ibtn_list_content_do_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_add_style"
                android:contentDescription="@string/image_description"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#C8F3F4F1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_list_random_music2"
                style="@style/btn_style2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/btn_list_random_music"
                android:visibility="gone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#8F999999" />

            <ListView
                android:id="@+id/lv_list_change_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"
                android:divider="@color/list_divider"
                android:dividerHeight="1dp"
                android:fadingEdge="none" >
            </ListView>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#8F999999" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_list_bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/list_bottom_bar_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ibtn_player_albumart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/image_description"
            android:background="@drawable/min_default_album" />

        <ImageButton
            android:id="@+id/ibtn_player_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description"
            android:background="@drawable/player_btn_mini_player" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_player_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="13sp"/>
			<RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    >
			    <TextView 
			    android:text="@string/music_time"
			    android:id="@+id/tv_player_currentPosition"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:textColor="@android:color/white"
			    android:textSize="10sp"
			    />
			     <TextView 
			    android:text="@string/music_time"
			    android:id="@+id/tv_player_duration"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="10sp"
			    android:textColor="@android:color/white"
			    android:layout_alignParentRight="true"
			    />
			</RelativeLayout>
            <ProgressBar
                android:id="@+id/pb_player_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="8dp"
                android:progressDrawable="@drawable/player_progress_style"
                 />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>